Fixed menu alignment

--- a/css/menu.css
+++ b/css/menu.css
@@ -17,6 +17,13 @@
     gap: 30px;
 }
 
+.menu-icon-container {
+    width: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .menu-icon {
     font-size: 50px !important;
     color: #394982 !important;
